# moodle-mcp-srv

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT-MAP.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  fastmcp.json  main.py  pyproject.toml
.agents/hooks/: posttooluse-ruff.sh  posttooluse-ty.sh
.agents/rules/: docs-context.md  domain-language.md  mcp-contracts.md  models.md  moodle-client.md  privacy-security.md  project-workflow.md  python-quality.md  tests.md  typed-python.md
.agents/skills/: README.md
.agents/skills/adr/: SKILL.md
.agents/skills/changelog/: SKILL.md
.agents/skills/codebase-design/: SKILL.md
.agents/skills/diagnosing-bugs/: SKILL.md
.agents/skills/domain-modeling/: SKILL.md
.agents/skills/implement/: SKILL.md
.agents/skills/improve-codebase-architecture/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/ship-pr/: SKILL.md
.agents/skills/tdd/: SKILL.md
.agents/skills/triage/: SKILL.md
.github/: AGENTS.md  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: actions.yml  ci.yml  codeql.yml  pr.yml  release.yml  scorecard.yml
docs/: release-checklist.md
docs/adr/: README.md
docs/agents/: AGENTS.md  README.md  context-routing.md  source-map.md  typed-python.md
docs/human/: README.md
docs/security/: threat-model.md
examples/: README.md  claude-code.mcp.json  claude-desktop.json  codex.config.toml  droid.md  gemini.settings.json  opencode.json  vscode.mcp.json  zed.settings.json
scripts/: ping.ps1  ping.sh
src/moodle_mcp/: CONTEXT.md  __init__.py  cli.py  server.py
src/moodle_mcp/api/: AGENTS.md  CONTEXT.md  __init__.py  _helpers.py  assignments.py  calendar.py  coercion.py  courses.py  dashboard.py  doctor.py  features.py  forums.py  grades.py  quizzes.py
src/moodle_mcp/cli/: __init__.py  app.py  registry.py
src/moodle_mcp/cli/commands/: __init__.py  diagnostics.py  inspection.py  serve.py
src/moodle_mcp/config/: __init__.py  logging.py  settings.py
src/moodle_mcp/models/: AGENTS.md  CONTEXT.md  __init__.py  assignments.py  calendar.py  courses.py  dashboard.py  diagnostics.py  forums.py  grades.py  json.py  quizzes.py  strings.py
src/moodle_mcp/moodle/: AGENTS.md  CONTEXT.md  __init__.py  client.py  errors.py  functions.py  params.py  user.py
src/moodle_mcp/prompts/: AGENTS.md  CONTEXT.md  __init__.py  learning.py  registry.py
src/moodle_mcp/resources/: AGENTS.md  CONTEXT.md  __init__.py  assignments.py  courses.py  forums.py  quizzes.py  registry.py  site.py
src/moodle_mcp/tools/: AGENTS.md  CONTEXT.md  __init__.py  assignments.py  availability.py  courses.py  forums.py  grades.py  quizzes.py  registry.py
tests/: test_assignments.py  test_availability.py  test_calendar.py  test_cli.py  test_courses.py  test_dashboard.py  test_doctor.py  test_features.py  test_forums.py  test_grades.py  test_helpers.py  test_imports.py  test_json_helpers.py  test_live_moodle_tools.py  test_mock_moodle_smoke.py  test_moodle.py  test_quizzes.py  test_resources.py  test_settings.py  test_string_types.py  test_tools.py
